Our sample-app using the react components is working. We have created the bundler manually

--- a/packages/apps/sample-app-basic/public/index.html
+++ b/packages/apps/sample-app-basic/public/index.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        console.log("Hello World!");
-      });
+      let d = new Date();
+      console.log("Today's date is " + d);
     </script>
 </head>
 <body>
 <p>Root below</p>
 <div id=""root></div>
-<script type="module" src="http://localhost:8080/sample-app-basic.cjs.js" />
+<script src="http://localhost:8080/sample-app-basic.cjs.js" />
 </body>
 </html>
